<resources>
    <string name="app_name">Dicas Para Economizar Água</string>

    <string name="drawer_settings">Configurações</string>
    <string name="drawer_open">Abrir Navegação</string>
    <string name="drawer_close">Fechar Navegação</string>

    <string name="action_settings">Configurações</string>
    <string name="action_reset">Resetar</string>

    <string name="title_activity_main">Dicas</string>
    <string name="title_activity_details">Detalhes</string>
    <string name="title_activity_introduction">Motivação</string>
    <string name="title_fragment_credit">Creditos</string>

    <string name="details_image_description">Imagem que mostra um copo de água</string>

    <string name="introduction_btn_prev">Anterior</string>
    <string name="introduction_btn_next">Próximo</string>
    <string name="introduction_btn_continue">Continuar</string>
    <string name="introduction_paragraph_01">Falar de economia de água em um planeta onde 75% da superfície é coberta pelo recurso hídrico parece papo de "ecochato", mas não é. O Planeta Água, como é conhecida a Terra, pode sim secar e esta realidade está mais perto de acontecer a cada dia, por conta do desperdício e da contaminação da água.</string>
    <string name="introduction_paragraph_02">A ONU já alertou: se não houver mudanças de hábitos no curto prazo, até 2030 quase metade da população global terá problemas de abastecimento - sem contar as 768 milhões de pessoas que já não possuem acesso à água potável e podem ficar em situação ainda mais complicada.</string>
    <string name="introduction_paragraph_03">O desperdício começa na própria rede de distribuição, por conta de problemas como vazamentos e "gatos" - sabia que, no Brasil, a cada 100 litros de água coletados, apenas 64 chegam ao seu destino? -, e se agrava quando o recurso entra na casa dos brasileiros.</string>
    <string name="introduction_paragraph_04">Economizar água já é uma necessidade urgente em todo o mundo e, além de não ser tão difícil, pode aliviar as despesas no fim do mês. Duvida? Confira 15 dicas supersimples que selecionamos para você começar a poupar água em casa hoje mesmo.</string>

    <string name="fonts">Fontes:</string>
    <string name="font_name">15 Dicas Práticas Para Economizar Água</string>
    <string name="font_author">Por Débora Spitzcovsky</string>
    <string name="font_available_link">Disponivel em: </string>
    <string name="font_link">http://planetasustentavel.abril.com.br/noticia/atitude/15-dicas-praticas-economizar-agua-desperdicio-777421.shtml?func=2</string>
    <string name="font_01">Manuais de Etiqueta do Planeta Sustentável</string>
    <string name="font_02">Organização das Nações Unidas</string>
    <string name="font_03">Instituto Akatu pelo Consumo Consciente</string>
    <string name="font_04">Sabesp</string>

    <string name="gridimage_transition">griditem_image</string>
    <string name="action_share">Enviar para…</string>


</resources>
